--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <title>Tanatos | Bootstrap 4 Project</title>
 </head>
 <body>
+  <!-- HEADER Starts -->
   <header id="header" class="container-fluid">
     <nav class="navbar navbar-dark fixed">
       <div class="container">
@@ -73,7 +74,7 @@
     </div>
   </header> <!-- Header ends -->
 
-  <!-- ABOUT US -->
+  <!-- ABOUT US Starts -->
   <section id="about" class="text-center py-5">
     <div class="container">
       <div class="row">
@@ -100,8 +101,9 @@
       </div>
     </div>
   </section>
+  <!-- ABOUT US Ends -->
 
-  <!-- SUBSCRIPTION -->
+  <!-- SUBSCRIPTION Starts -->
   <section id="subscription" class="py-5 text-center">
     <div class="container">
       <div class="row">
@@ -114,8 +116,9 @@
       </div>
     </div>
   </section>
+  <!-- SUBSCRIPTION Ends -->
 
-  <!-- OUR WORKS -->
+  <!-- OUR WORKS Starts -->
   <section id="ourWorks" class="py-5 text-center">
     <div class="container">
       <div class="row">
@@ -153,8 +156,9 @@
       </div>
     </div>
   </section>
+  <!-- OUR WORKS Ends -->
 
-  <!-- TESTIMONIALS -->
+  <!-- TESTIMONIALS Starts -->
   <section id="testimonial" class="py-5 text-center text-light">
     <div class="container">
       <div class="row">
@@ -166,8 +170,9 @@
       </div>
     </div>
   </section>
+  <!-- TESTIMONIALS Ends -->
 
-  <!-- OUR TEAM -->
+  <!-- OUR TEAM Starts -->
   <section id="ourTeam" class="py-5 text-center">
     <div class="container">
       <div class="row mb-5">
@@ -255,8 +260,9 @@
       </div>
     </div>
   </section>
+  <!-- OUR TEAM Ends -->
 
-  <!-- MESSAGE -->
+  <!-- MESSAGE Starts -->
   <section id="message" class="py-5 text-center">
     <div class="container">
       <div class="row">
@@ -278,8 +284,9 @@
       </div>
     </div>
   </section>
+  <!-- MESSAGE Ends -->
 
-  <!-- FOOTER -->
+  <!-- FOOTER Starts -->
   <footer class="text-light py-5">
     <div class="container">
       <div class="col-6">
@@ -290,6 +297,7 @@
       </div>
     </div>
   </footer>
+  <!-- FOOTER Ends -->
 
 
 
